# psimd

./: CMakeLists.txt  LICENSE
cmake/: psimd-config.cmake.in
include/: psimd.h
